--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,13 @@
 # Node.js related
 node_modules/
+backend/node_modules/
 npm-debug.log
 yarn-error.log
 backend/.env
 
 # React / create-react-app related
 frontend/node_modules/
+frontend/.env
 frontend/.env.local
 frontend/.env.development.local
 frontend/.env.test.local
