--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,8 @@
   "author": "9600bauds",
   "license": "MIT",
   "dependencies": {
+    "bcrypt": "^5.1.0",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dompurify": "^3.0.5",
     "dotenv": "^16.3.1",
@@ -21,6 +23,7 @@
     "express-async-errors": "^3.1.1",
     "express-rate-limit": "^6.9.0",
     "jsdom": "^22.1.0",
+    "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.4.2",
     "mongoose-unique-validator": "^4.0.0",
     "socket.io": "^4.7.2"
