--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,8 @@ backend/node_modules/
 npm-debug.log
 yarn-error.log
 backend/.env
+backend/public
+backend/build
 
 # React / create-react-app related
 frontend/node_modules/
@@ -12,6 +14,7 @@ frontend/.env.local
 frontend/.env.development.local
 frontend/.env.test.local
 frontend/.env.production.local
+frontend/public/
 frontend/build/
 frontend/.DS_Store
 
@@ -29,4 +32,5 @@ frontend/.DS_Store
 Thumbs.db
 list.ps1
 frontend/package-lock.json
+backend/package-lock.json
 backend/package-lock.json
