--- a/backend/package.json
+++ b/backend/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "cross-env NODE_ENV=production node index.js",
     "dev": "cross-env NODE_ENV=development nodemon --inspect index.js",
+    "build": "@powershell Remove-Item -Recurse -Force build && cd ../frontend && npm run build && @powershell Copy-Item build -Recurse ../backend",
     "deploy": "fly deploy",
     "logs:prod": "fly logs",
     "lint": "eslint . --fix",
@@ -17,6 +18,7 @@
     "bcrypt": "^5.1.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "cross-env": "^7.0.3",
     "dompurify": "^3.0.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
@@ -29,7 +31,7 @@
     "socket.io": "^4.7.2"
   },
   "devDependencies": {
-    "cross-env": "^7.0.3",
+    "@flydotio/dockerfile": "^0.4.3",
     "eslint": "^8.46.0",
     "nodemon": "^3.0.1"
   }
