--- a/backend/fly.toml
+++ b/backend/fly.toml
@@ -18,3 +18,6 @@ primary_region = "eze"
   auto_start_machines = true
   min_machines_running = 0
   processes = ["app"]
+
+[experimental]
+  sticky_sessions = true
