--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "react-toastify": "^9.1.3",
     "socket.io-client": "^4.7.2",
     "styled-components": "^6.0.7",
+    "unique-names-generator": "^4.7.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
