--- a/backend/package.json
+++ b/backend/package.json
@@ -10,7 +10,8 @@
     "deploy": "fly deploy",
     "logs:prod": "fly logs",
     "lint": "eslint . --fix",
-    "test": "cross-env NODE_ENV=test jest --verbose --runInBand"
+    "test": "cross-env NODE_ENV=test jest --verbose --runInBand",
+    "bd": "npm run build && npm run deploy"
   },
   "author": "9600bauds",
   "license": "MIT",
